# sous-chef

./: .codeclimate.yml  .editorconfig  .git-blame-ignore-revs  .gitignore  CONTRIBUTING.md  DEVSETUP.md  Dockerfile  INSTALL.md  MANIFEST.in  PACKAGING.md  README.adoc  README.md  UPDATE.md  docker-compose.prod.yml  docker-compose.travis.yml  docker-compose.yml  mock_addresses.csv  mock_clients.csv  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  wait-for-it.sh
.github/workflows/: check_pr.yml  dockerimage.yml  pythonapp.yml
.tx/: config
configsamples/: nginx.conf  souschef.service
docs/: DOCS-README.md  Makefile  conf.py  cronjob.adoc  internationalization.adoc
souschef/: dataexec.py  dataload.py  djangocompat.py  manage.py
souschef/billing/: admin.py  apps.py  csvexport.py  factories.py  filters.py  models.py  tests.py  types.py  urls.py  views.py
souschef/billing/migrations/: 0001_initial.py  (+3 more)
souschef/configsamples/: nginx.conf
souschef/cronscripts/: souschef_daily.sh
souschef/datamigration/: apps.py  tests.py
souschef/delivery/: apps.py  filters.py  forms.py  meal_labels.py  models.py  tests.py  tsp.py  urls.py  views.py
souschef/meal/: admin.py  apps.py  constants.py  factories.py  models.py  settings.py  tests.py  urls.py
souschef/member/: admin.py  apps.py  constants.py  factories.py  filters.py  forms.py  formsets.py  formsfield.py  models.py  tests.py  types.py  urls.py  views.py
souschef/note/: admin.py  apps.py  factories.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
souschef/notification/: admin.py  apps.py  models.py  urls.py
souschef/order/: admin.py  apps.py  constants.py  factories.py  filters.py  forms.py  mixins.py  models.py  prices.py  tests.py  urls.py  views.py
souschef/page/: apps.py  models.py  tests.py  urls.py  views.py
souschef/pycrons/: cleaning.py
souschef/sous_chef/: context_processors.py  rules.py  settings.py  settings_test.py  settings_test_fr.py  tests.py  urls.py
src/: dataload.py
src/billing/: factories.py  models.py  tests.py  views.py
src/datamigration/: tests.py
src/delivery/: tests.py  views.py
src/meal/: admin.py  factories.py  tests.py  urls.py
src/member/: factories.py  forms.py  models.py  tests.py  urls.py  views.py
src/note/: tests.py
src/order/: factories.py  forms.py  models.py  tests.py  views.py
src/page/: views.py
src/sous_chef/: settings.py  settings_test_fr.py
tools/: compile_assets.sh  compile_assets_docker.sh
tools/gulp/: gulpfile.js  package-lock.json
tools/nginx/: nginx.conf
(+169 files in other folders)
