[flake8]
select = F,E722,E901,E999

[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[pycodestyle]
count = True
show-source = True
exclude = setup.py,docs,migrations,node_modules,__pycache__,ve,env,venv,
format=pylint
